--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <title>Canvas Maps</title>
 </head>
 <body>
-<div id="output">
-  
-</div>
+
 
 <script src="index.js"></script>
 </body>
